kustomize-out.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    goldilocks.fairwinds.com/enabled: "true"
  name: gitea
---
apiVersion: v1
kind: Namespace
metadata:
  name: harbor
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`argocd.local`)
    services:
    - name: argocd-server
      port: 443
      scheme: https
  tls:
    secretName: local-tls-secret
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-http
  namespace: argocd
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`argocd.local`)
    services:
    - name: argocd-server
      port: 443
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-http
  namespace: gitea
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`gitea.local`)
    middlewares:
    - name: redirect-to-https
    services:
    - name: gitea-http
      port: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-https
  namespace: gitea
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`gitea.local`)
    services:
    - name: gitea-http
      port: 3000
  tls:
    secretName: gitea-tls-secret
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: harbor
  namespace: harbor
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`harbor.local`)
    services:
    - name: harbor
      port: 80
  tls:
    secretName: harbor-tls-secret
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: harbor-http
  namespace: harbor
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`harbor.local`)
    middlewares:
    - name: redirect-to-https
    services:
    - name: harbor
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-api
  namespace: minio-operator
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`minio-api.local`)
    services:
    - name: minio
      port: 80
  tls:
    secretName: minio-api-tls-secret
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console
  namespace: minio-operator
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`minio.local`)
    services:
    - name: minio-console
      port: 9090
  tls:
    secretName: minio-tls-secret
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`alertmanager.local`)
    services:
    - name: kps-kube-prometheus-stack-alertmanager
      port: 9093
  tls:
    secretName: alertmanager-tls-secret
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`grafana.local`)
    services:
    - name: grafana
      port: 80
  tls:
    secretName: grafana-tls-secret
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`prometheus.local`)
    services:
    - name: kps-kube-prometheus-stack-prometheus
      port: 9090
  tls:
    secretName: prometheus-tls-secret
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: gitea-ssh
  namespace: gitea
spec:
  entryPoints:
  - ssh
  routes:
  - match: HostSNI(`*`)
    services:
    - name: gitea-ssh
      port: 22
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: gitea
spec:
  redirectScheme:
    permanent: true
    scheme: https
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: harbor
spec:
  redirectScheme:
    permanent: true
    scheme: https
